--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
 		"slug": "mel-da-terra-verde",
 		"version": "1.0.0",
 		"orientation": "portrait",
-		"icon": "./src/assets/icon.png",
+		"icon": "./assets/icon.png",
 		"splash": {
-			"image": "./src/assets/splash.png",
+			"image": "./assets/app-splash.png",
 			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
+			"backgroundColor": "#f7de01"
 		},
 		"updates": {
 			"fallbackToCacheTimeout": 0
@@ -19,12 +19,12 @@
 		},
 		"android": {
 			"adaptiveIcon": {
-				"foregroundImage": "./src/assets/adaptive-icon.png",
+				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#FFFFFF"
 			}
 		},
 		"web": {
-			"favicon": "./src/assets/favicon.png"
+			"favicon": "./assets/favicon.png"
 		}
 	}
 }
