--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
 		"eject": "expo eject"
 	},
 	"dependencies": {
-		"@expo/vector-icons": "^12.0.5",
+		"@expo/vector-icons": "^12.0.0",
 		"@react-navigation/native": "^6.0.2",
 		"@react-navigation/native-stack": "^6.1.0",
 		"@react-navigation/stack": "^6.0.7",
 		"expo": "~42.0.1",
 		"expo-status-bar": "~1.0.4",
-		"firebase": "^9.0.1",
-		"react": "16.13.1",
+		"react": "^17.0.2",
 		"react-dom": "16.13.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
 		"react-native-elements": "^3.4.2",
