.evn & google OAuth ok

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@react-navigation/native": "^6.0.2",
         "@react-navigation/native-stack": "^6.1.0",
         "@react-navigation/stack": "^6.0.7",
+        "babel-plugin-inline-dotenv": "^1.6.0",
         "expo": "~42.0.1",
         "expo-application": "^3.2.0",
         "expo-auth-session": "~3.3.1",
