--- a/package.json
+++ b/package.json
@@ -33,9 +33,18 @@
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
+        "@testing-library/jest-native": "^4.0.2",
+        "@testing-library/react-native": "^7.2.0",
         "@types/react": "~16.9.35",
         "@types/react-native": "~0.63.2",
+        "jest-expo": "^42.1.0",
         "typescript": "~4.0.0"
+    },
+    "jest": {
+        "preset": "jest-expo",
+        "setupFilesAfterEnv": [
+            "@testing-library/jest-native/extend-expect"
+        ]
     },
     "private": true
 }
