--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 GOOGLE_CLIENT_ID=228739313124-c7qan6fu64n19hvnl297589492jemul8.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=cJroXrCwG1MGbVJrWhlSIA4z
 GOOGLE_REDIRECT_URI=https://auth.expo.io/@chernicharo/mel-da-terra-verde
+TEST_GOOGLE_ACCESS_TOKEN=ya29.a0ARrdaM97ueNSt-_d1zuQd3vFISEDVesXQ2jhQkazicG7bJe5kGOd0vcoM_gaKwd37Oibf6ZJFVkdailiPhSxkO_dO5-lWZbL5xx-EPNz6S0dmSTFMKFHJS0aneKRjqdsI9oUfm1tcMpZJyt29Khon4qiVCApkw
 
+GOOGLE_CLIENT_SECRET=cJroXrCwG1MGbVJrWhlSIA4z
 GOOGLE_API_KEY=AIzaSyCoOAwa_AxKBqctfYeSLr_ckAHwMIr8W2Q
 
 FIREBASE_API_KEY=AIzaSyBqRb8ifLB5qfKgFNr4H0iMIIRXS_I16U8
@@ -11,5 +12,3 @@ FIREBASE_STORAGE_BUCKET=mel-da-terra.appspot.com
 FIREBASE_MESSAGING_SENDER_ID=461825274725
 FIREBASE_APP_ID=1:461825274725:web:7e9c92730ec4b352dc678c
 FIREBASE_MEASUREMENT_ID=G-TBWSMVHQ27
-
-
