--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
         "@types/react": "~16.9.35",
         "@types/react-native": "~0.63.2",
         "jest-expo": "^42.1.0",
+        "jest-fetch-mock": "^3.0.3",
+        "ts-jest": "^27.0.5",
         "typescript": "~4.0.0"
     },
     "private": true
