coverage report configs & jest --flaged scripts

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "start": "expo start",
         "android": "expo start --android",
         "test": "jest",
+        "test:w": "jest --watchAll",
+        "test:c": "jest --coverage",
         "ios": "expo start --ios",
         "web": "expo start --web",
         "eject": "expo eject"
