--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "expo-auth-session": "~3.3.1",
         "expo-random": "~11.2.0",
         "expo-status-bar": "~1.0.4",
-        "firebase9": "^9.0.1",
+        "@firebase": "^9.0.2",
         "react": "^17.0.2",
         "react-dom": "16.13.1",
         "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
