--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,6 @@
 {
   "firestore": {
-    "rules": "firestore.rules",
+    "rules": " ",
     "indexes": "firestore.indexes.json"
-  },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ],
-    "source": "functions"
   }
 }
